// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScreenReaderNotification/> renders politeness properly 1`] = `
<div
  aria-live="assertive"
  class="ScreenReaderNotification__Styled-o4wxu2-0 hZyAuJ"
  data-testid="ScreenReaderNotification"
>
  <x-child />
</div>
`;

exports[`<ScreenReaderNotification/> renders properly 1`] = `
<div
  aria-live="polite"
  class="ScreenReaderNotification__Styled-o4wxu2-0 hZyAuJ"
  data-testid="ScreenReaderNotification"
>
  <x-child />
</div>
`;
